fix hover stay issue on mobile

--- a/dff2020/static/dff2020/css/shortlist_details.css
+++ b/dff2020/static/dff2020/css/shortlist_details.css
@@ -36,7 +36,7 @@
     /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
 }
 .options a:hover:not(.disabled) {
-    background-color: transparent;
+    background-color: #f7cd23;
     /* border: none; */
     /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
 }
